
User-visible changes in version 1.0.0  (2011-03-18):
* fixed bugs: several bugs in the powder diffraction add-on,
  problem with negative simple-variables, crash when the status bar has an
  extra value set
* GUI: several changes necessary to make the program working on OSX (>= 10.4)
* GUI: new configuration dialogs for plots
* GUI: all configs including the default one are now stored in .fityk/configs/
* samples are always installed, removed configure option --with-samples,
  added menu Help > Examples in the GUI
* requires wxWidgets >= 2.9.1

User-visible changes in version 0.9.8  (not yet):
* several bug fixes ported from version 1.0.0 to 0.9.8
  (unlike 1.x, this version can be built with wxWidgets 2.8)

User-visible changes in version 0.9.7  (2011-02-08):
* bug fixes: UDFs (user-defined functions) did not work in ver. 0.9.5-6,
  a few fixes in the powder diffraction add-on and in other places
* data operations: added aggregate functions argmin, argmax and count
* GUI: redesigned the Data > Export dialog

User-visible changes in version 0.9.6  (2011-01-26):
* fixed three bugs, one of them was sometimes crashing the program at startup

User-visible changes in version 0.9.5  (2011-01-24):
* libfityk: the parser has been completely rewritten and the syntax was
  slightly changed:
  - major changes in the `info' command; two new commands, `print' and `debug', 
    partially took over some functionality of the old `info'
  - "commands" replaced by "set"/"exec"
  - "dump" replaced by "info state"
  - values of the fitting_method setting changed to lower case
  - "set @0.title = ..." replaced with "@0: title = ..."
  - settings: removed formula_export_style, guess_at_center_pm and
    can_cancel_guess, changed autoplot and verbosity,
    added logfile, log_full, fit_replot,
    info_numeric_format renamed to numeric_format, data_default_sigma to
    default_sigma, cut_function_level to function_cutoff,
    variable_domain_percent to domain_percent